# Vita3K

./: .gitmodules  gen.bat  gen.sh  shitfuck.txt
src/emulator/: CMakeLists.txt  app.cpp  main.cpp
src/emulator/cpu/: CMakeLists.txt
src/emulator/cpu/include/cpu/: cpu_dynarmic.h  functions.h
src/emulator/cpu/src/: cpu.cpp  cpu_dynarmic.cpp
src/emulator/gui/: CMakeLists.txt
src/emulator/gxm/include/gxm/: types.h
src/emulator/host/include/host/: app.h  config.h
src/emulator/host/src/: app.cpp  config.cpp  host.cpp
src/emulator/io/include/io/: io.h
src/emulator/kernel/include/kernel/: state.h
src/emulator/kernel/include/kernel/thread/: thread_functions.h
src/emulator/kernel/src/: load_self.cpp
src/emulator/kernel/src/thread/: thread.cpp
src/emulator/mem/include/mem/: mem.h
src/emulator/mem/src/: mem.cpp
src/emulator/modules/SceGxm/: SceGxm.cpp
src/emulator/modules/SceKernelThreadMgr/: SceThreadmgr.cpp  SceThreadmgrCoredumpTime.cpp
src/emulator/modules/SceLibKernel/: SceLibKernel.cpp
src/emulator/modules/SceSysmodule/: SceSysmodule.cpp
src/emulator/renderer/src/: functions.h  load_shaders.cpp  renderer.cpp  uniforms.cpp
src/emulator/shader/: CMakeLists.txt
src/emulator/shader/include/shader/: functions.h  matcher.h  types.h
src/emulator/shader/src/: parse_gxp_usse.cpp  spirv_recompiler.cpp
src/emulator/shadergen/src/: shadergen_spirv.cpp
src/emulator/util/: CMakeLists.txt
